Edited About text, fixed spacing on descriptions for Package Delivery and Instrument Calc

--- a/src/components/styles/About.css
+++ b/src/components/styles/About.css
@@ -24,6 +24,9 @@ body {
     font-size: 17px;  
 }
 
+.facebook {
+    text-decoration: none;
+}
 .bio-container {
     margin: 5%;
     font-size: 20px; 
